[package]
name = "sim15118-pev-binding"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
#uncomment the "afbv4" line if you want to use "afbv4" as an external dependencies (for development purpose.)
# You can activate this external dependency with the feature "afbv4" like :"cargo build --features afbv4"
#afbv4 = { git = "https://github.com/redpesk-common/afb-librust", optional = true }
iso15118 = { git ="https://github.com/tux-evse/iso15118-encoders-rs.git", branch = "main"}
nettls =   { git ="https://github.com/tux-evse/iso15118-network-rs.git",  branch = "sandbox/ronan/fixdep"}

serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
iso15118_jsonc= {path ="../jsonc-15118"}

[features]
#default = ["iso15118","iso15118/default"]
#afbv4 = ["iso15118","iso15118/afbv4", "dep:afbv4"]

[lib]
name = "afb_sim15118_pev"
crate-type = ["cdylib"]
path = "src/libso.rs"