[package]
name = "sim15118-evse-binding"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main"}
iso15118_jsonc = {path = "../jsonc-15118"}
iso15118_exi = {path = "../exi-15118"}
nettls= {git= "https://github.com/tux-evse/iso15118-network-rs.git", branch="main"}

[lib]
name = "afb_sim15118_evse"
crate-type = ["cdylib"]
path = "src/@libso.rs"