[package]
name = "iso15118-simulator"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
base64={ version= "0.22"}
iso15118_jsonc= {path ="../jsonc-15118"}
nettls= {path ="../../iso15118-network-rs"}
iso15118= {path ="../../iso15118-encoders-rs", default-features = false, optional = true}

[features]
default = ["iso15118","iso15118/default"]
afbv4 = ["iso15118","iso15118/afbv4", "dep:afbv4"]

[lib]
name = "afb_iso15118_simulator"
crate-type = ["cdylib"]
path = "libso.rs"