[package]
name = "iso15118-2-json"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
base64={ version= "0.22"}
iso15118= {path ="../../iso15118-encoders-rs"}
iso15118_jsonc= {path ="../iso15118-jsonc"}
nettls= {path ="../../iso15118-network-rs"}

[lib]
name = "afb_iso15118_2"
crate-type = ["cdylib"]
path = "libso.rs"