[package]
name = "iso15118_exi"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
iso15118_jsonc= {path ="../jsonc-15118"}
nettls= {git= "https://github.com/tux-evse/iso15118-network-rs.git", branch="main"}
iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main", default-features = false, optional = true}

[features]
default = ["iso15118","iso15118/default"]
#afbv4 = ["iso15118","iso15118/afbv4", "dep:afbv4"]

[lib]
name = "iso15118_exi"
crate-type = ["lib"]
path = "src/@lib-exi.rs"