[package]
name = "iso15118_jsonc"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
base64={ version= "0.22"}
iso15118= {path ="../../iso15118-encoders-rs"}
nettls= {path ="../../iso15118-network-rs"}

[lib]
name = "iso15118_jsonc"
crate-type = ["lib"]
path = "lib-jsonc.rs"