[package]
name = "iso15118-pcap"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[features]
default = []
afbmock=[]


[dependencies]
#uncomment the "afbv4" line if you want to use "afbv4" as an external dependencies (for development purpose.)
# You can activate this external dependency with the feature "afbv4" like :"cargo build --features afbv4"
#afbv4 = { git = "https://github.com/redpesk-common/afb-librust", optional = true }
iso15118 = { git ="https://github.com/tux-evse/iso15118-encoders-rs.git", branch = "sandbox/ronan/fixdep"}
iso15118_jsonc = {path ="../jsonc-15118"}

[build-dependencies]
bindgen    = ">=0.6"
system-deps = "7.0.1"
cc = "1"

[package.metadata.system-deps]
libpcap= "1.10"
gnutls="3.7"

[[bin]]
name = "pcap-iso15118"
path = "src/pcap-import.rs"



