[package]
name = "iso15118-pcap"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[features]
default = []
afbmock=[]


[dependencies]
iso15118_jsonc = {path ="../jsonc-15118"}
iso15118= {path ="../../iso15118-encoders-rs"}

[build-dependencies]
bindgen    = ">=0.6"
system-deps = "7"
cc = "1"

[package.metadata.system-deps]
libpcap= "1.10"
gnutls="3.7"

[[bin]]
name = "pcap-iso15118"
path = "src/pcap-import.rs"



